tree-sitter-daslang/test/corpus/declarations.txt
================================================================================
Module declaration
================================================================================

module my_module public

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (identifier)))

================================================================================
Module declaration with shared
================================================================================

module my_module shared public

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    name: (identifier)))

================================================================================
Require declaration
================================================================================

require daslib/strings;

--------------------------------------------------------------------------------

(source_file
  (require_declaration
    module: (require_module_name
      (identifier)
      (identifier))))

================================================================================
Require declaration with alias
================================================================================

require daslib/json as json public;

--------------------------------------------------------------------------------

(source_file
  (require_declaration
    module: (require_module_name
      (identifier)
      (identifier))
    alias: (identifier)))

================================================================================
Options declaration
================================================================================

options gen2;

--------------------------------------------------------------------------------

(source_file
  (options_declaration
    (annotation_argument_list
      (annotation_argument
        name: (identifier)))))

================================================================================
Simple function
================================================================================

def foo() {
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    (function_argument_list)
    body: (block)))

================================================================================
Function with arguments and return type
================================================================================

def add(a : int, b : int) : int {
  return a + b;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    (function_argument_list
      (function_argument
        name: (identifier)
        type: (basic_type))
      (function_argument
        name: (identifier)
        type: (basic_type)))
    (function_return_type
      type: (basic_type))
    body: (block
      (return_statement
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
Function with single-expression arrow body
================================================================================

def succ(x : int) => x + 1

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    (function_argument_list
      (function_argument
        name: (identifier)
        type: (basic_type)))
    body: (binary_expression
      (identifier)
      (integer_literal))))

================================================================================
Method with single-expression arrow body
================================================================================

class C {
  def area() : int => 2
}

--------------------------------------------------------------------------------

(source_file
  (structure_declaration
    name: (identifier)
    (structure_member
      (structure_method
        name: (function_name
          (identifier))
        (function_argument_list)
        (function_return_type
          type: (basic_type))
        body: (integer_literal)))))

================================================================================
Struct declaration
================================================================================

struct Foo {
  x : int;
  y : float;
}

--------------------------------------------------------------------------------

(source_file
  (structure_declaration
    name: (identifier)
    (structure_member
      (structure_field
        name: (identifier)
        type: (basic_type)))
    (structure_member
      (structure_field
        name: (identifier)
        type: (basic_type)))))

================================================================================
Enum declaration
================================================================================

enum Color {
  red,
  green,
  blue
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    (enum_entry
      name: (identifier))
    (enum_entry
      name: (identifier))
    (enum_entry
      name: (identifier))))

================================================================================
Enum with base type and values
================================================================================

enum Flags : uint8 {
  none = 0u8,
  read = 1u8,
  write = 2u8
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    name: (identifier)
    base_type: (enum_base_type)
    (enum_entry
      name: (identifier)
      value: (integer_literal))
    (enum_entry
      name: (identifier)
      value: (integer_literal))
    (enum_entry
      name: (identifier)
      value: (integer_literal))))

================================================================================
Global variable
================================================================================

let x = 42;

--------------------------------------------------------------------------------

(source_file
  (global_variable_declaration
    (global_variable_binding
      name: (identifier)
      value: (integer_literal))))

================================================================================
Global variable with type
================================================================================

var y : int = 10;

--------------------------------------------------------------------------------

(source_file
  (global_variable_declaration
    (global_variable_binding
      name: (identifier)
      type: (basic_type)
      value: (integer_literal))))

================================================================================
Typedef
================================================================================

typedef MyInt = int;

--------------------------------------------------------------------------------

(source_file
  (typedef_declaration
    name: (identifier)
    type: (basic_type)))

================================================================================
Typedef distinct (nominal newtype)
================================================================================

typedef distinct Id = int
typedef private distinct Secret = float

--------------------------------------------------------------------------------

(source_file
  (typedef_declaration
    name: (identifier)
    type: (basic_type))
  (typedef_declaration
    name: (identifier)
    type: (basic_type)))

================================================================================
Function with type-witness parameter (basic)
================================================================================

def parse_int(t : type<int>) {
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    (function_argument_list
      (function_argument
        name: (identifier)
        type: (type_witness
          type: (basic_type))))
    body: (block)))

================================================================================
Function with type-witness parameter (auto)
================================================================================

def get_type_id(t : type<auto(T)>) : int {
  return -1;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    (function_argument_list
      (function_argument
        name: (identifier)
        type: (type_witness
          type: (auto_type
            (identifier)))))
    (function_return_type
      type: (basic_type))
    body: (block
      (return_statement
        (unary_expression
          (integer_literal))))))

================================================================================
Function with type-witness return type
================================================================================

def make_witness() : type<int> {
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    (function_argument_list)
    (function_return_type
      type: (type_witness
        type: (basic_type)))
    body: (block)))

================================================================================
Struct field with type-witness type
================================================================================

struct Foo {
  t : type<float>
}

--------------------------------------------------------------------------------

(source_file
  (structure_declaration
    name: (identifier)
    (structure_member
      (structure_field
        name: (identifier)
        type: (type_witness
          type: (basic_type))))))

================================================================================
Function with nested type-witness
================================================================================

def foo(t : type<array<int>>) {
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    (function_argument_list
      (function_argument
        name: (identifier)
        type: (type_witness
          type: (array_type
            (basic_type)))))
    body: (block)))

================================================================================
Optional require
================================================================================

require ?math math

--------------------------------------------------------------------------------

(source_file
  (require_declaration
    guard: (require_module_name
      (identifier))
    module: (require_module_name
      (identifier))))

================================================================================
Optional require with path target and public
================================================================================

require ?pugixml pugixml/linq_fold_xml public

--------------------------------------------------------------------------------

(source_file
  (require_declaration
    guard: (require_module_name
      (identifier))
    module: (require_module_name
      (identifier)
      (identifier))))

================================================================================
Optional require with a PATH guard
================================================================================

require ?llvm/daslib/llvm_tune dasllama/dasllama_math_gen
require ?llvm/daslib/llvm_tune llvm/daslib/llvm_tune public

--------------------------------------------------------------------------------

(source_file
  (require_declaration
    guard: (require_module_name
      (identifier)
      (identifier)
      (identifier))
    module: (require_module_name
      (identifier)
      (identifier)))
  (require_declaration
    guard: (require_module_name
      (identifier)
      (identifier)
      (identifier))
    module: (require_module_name
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Require with relative path prefixes
================================================================================

require ./sibling
require ../parent_mod
require ../../foo/bar.das

--------------------------------------------------------------------------------

(source_file
  (require_declaration
    module: (require_module_name
      (identifier)))
  (require_declaration
    module: (require_module_name
      (identifier)))
  (require_declaration
    module: (require_module_name
      (identifier)
      (identifier)
      (identifier))))
